[package]
name = "herakles-proc-mem-exporter"
version = "0.1.0"
description = "Prometheus exporter for per-process RSS/PSS/USS memory metrics"
authors = ["Michael Moll <proc-mem@herakles.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/herakles-io/herakles-proc-mem-exporter"
readme = "README.md"
keywords = ["prometheus", "exporter", "memory", "metrics", "process"]
categories = ["command-line-utilities", "monitoring"]

[dependencies]
axum = { version = "0.8", features = ["http1", "macros", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
prometheus = "0.14"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.21.3"
toml = "0.5"

# LOGGING DEPENDENCIES
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional: Für bessere Performance
ahash = "0.8"

# System calls for runtime configuration (e.g., clock ticks)
libc = "0.2"

[build-dependencies]
vergen = { version = "8.0", features = ["build", "git", "gitcl"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
name = "herakles-proc-mem-exporter"
maintainer = "Michael Moll <proc-mem@herakles.io>"
copyright = "2024, Herakles IO"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  [
    "target/release/herakles-proc-mem-exporter",
    "usr/bin/",
    "755",
  ],
  [
    "examples/herakles-proc-mem-exporter.yaml",
    "/etc/herakles-proc-mem-exporter/",
    "644",
  ],
  [
    "examples/systemd.service",
    "/lib/systemd/system/",
    "644",
  ],
]
extended-description = """\
Prometheus exporter that provides per-process memory metrics including\
RSS (Resident Set Size), PSS (Proportional Set Size), and USS (Unique Set Size).\
Ideal for containerized environments and memory usage analysis.\
"""
